user module updated

--- a/douban/css/style.css
+++ b/douban/css/style.css
@@ -284,3 +284,26 @@ input,label{
 	width: 100px;
 	height: 148px;
 }
+.pic-text li {
+	float: left;
+	width: 295px;
+	margin: 0 0 20px 0;
+	line-height: 24px;
+}
+.pic-text li img {
+	float:left;
+	display: inline;
+	margin: 0 10px 0 0;
+}
+.pic-text li h3{
+	font-size: 14px;
+	margin: 0 0 10px 0;
+	font-weight: normal;
+}
+.pic-text li h3, .pic-text li p{
+	margin: 0 0 0 60px;
+}
+.pic-text li p{
+	color: #666;
+}
+/*.piclist li img{display:block;}*/
