--- a/douban/css/style.css
+++ b/douban/css/style.css
@@ -411,3 +411,28 @@ input,label{
 	width: 68px;
 	height: 98px;
 }
+
+.contact{
+	line-height: 24px;
+}
+
+.contact .client{
+	background: url("../images/client_bg.gif") no-repeat 0 0;
+	width: 290px;
+	height: 40px;
+	padding: 15px 10px;
+	margin: 30px 0 0;
+}
+
+
+.contact .client h3{
+	font-size: 16px;
+	margin: 0 0 0 60px;
+}
+.contact .client h3 a {
+	color: #214e92;
+}
+.contact .client p{
+	color: #4d4d4d;
+	margin: 0 0 0 60px;
+}
