--- a/douban/css/style.css
+++ b/douban/css/style.css
@@ -219,6 +219,33 @@ input,label{
 	height: 11px;
 	margin: 0 5px;
 }
+.star4{background-position:0 -66px}
+.star3{background-position:0 -77px}
+.star2{background-position:0 -88px}
+.star1{background-position:0 -99px}
+.star0{background-position:0 -110px}
+.bigstar{background:url("../images/bigstars.gif") no-repeat 0 0;display:inline-block;*zoom:1;*display:inline;width:75px;height:14px;overflow:hidden;margin:0 5px;}
+.bigstar10{background-position:0 0}
+.bigstar9{background-position:0 -14px}
+.bigstar8{background-position:0 -28px}
+.bigstar7{background-position:0 -42px}
+.bigstar6{background-position:0 -56px}
+.bigstar5{background-position:0 -70px}
+.bigstar4{background-position:0 -84px}
+.bigstar3{background-position:0 -98px}
+.bigstar2{background-position:0 -112px}
+.bigstar1{background-position:0 -136px}
+.bigstar0{background-position:0 -140px}
+.minstar{background:url("../images/smlstars.gif") no-repeat 0 0;display:inline-block;*zoom:1;*display:inline;width:45px;height:9px;overflow:hidden;margin:0 5px;}
+.minstar5{background-position:0 0}
+.minstar4{background-position:0 -9px}
+.minstar3{background-position:0 -18px}
+.minstar2{background-position:0 -27px}
+.minstar1{background-position:0 -36px}
+.minstar0{background-position:0 -45px}
+.star10{background-position:0 0}
+.star9{background-position:0 -11px}
+.star6{background-position:0 -44px}
 .star5{
 	background-position: 0 -55px;
 }
@@ -445,4 +472,53 @@ input,label{
 }
 #ft a{
 	margin: 0 5px;
+}
+
+.intro-star h2{
+	color: #494949;
+	font-size: 25px;
+	line-height: 36px;
+}
+
+.intro-star h2 span {
+	color: #888;
+}
+
+.intro-star .cover{
+	width: 310px;
+}
+.intro-star .cover img{
+	float: left;
+}
+.intro-star .cover ul{
+	margin: 0 0 0 112px;
+	color: #666;
+}
+.intro-star .cover ul li span{
+	color: #111;
+}
+.intro-star .film-star{
+	width: 150px;
+}
+.intro-star .film-star .total{
+	font-size: 14px;
+	color: #f54d06;
+}
+.intro-star .film-star ul li{
+	font-size: 10px;
+	height: 14px;
+	line-height: 14px;
+	margin: 0 0 4px 0;
+}
+.intro-star .film-star ul .scale{
+	background: #f5cbad;
+	display: inline-block;
+	/**zoom:1;*/
+	/**display:inline;*/
+	height: 14px;
+	margin: 0 3px 0 0;
+}
+
+.intro-star .film-star .num{
+	margin: 10px 0 5px 5px;
 }
